# cpp-ai-agent

./: .clang-format  .clang-tidy  .env.example  .gitignore  .gitlab-ci.yml  AGENTS.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.example  README.md  cppcheck-suppressions.txt  cppcheck.xml  sonar-project.properties  vcpkg.json
ansible/: ansible.cfg  deploy.yml  inventory.ini
ansible/roles/ai-agent/tasks/: main.yml
ansible/templates/: .env.j2  ai-agent.service.j2
config/: mcp_servers.json  modes.json  settings.json  skills.json
docs/: 00-项目结构说明.md  01-需求规格说明书.md  02-系统设计文档.md  03-开发计划书.md  04-演示说明.md  05-答辩提纲.md  06-测试报告.md  07-项目总结.md  08-版本日志.md  09-项目思维导图.md  10-团队分工.md  10-已实现功能PRD图.md  11-四色建模法.md  11-待开发功能PRD图.md  14-需求完成情况对照表.md  15-SonarQube代码质量评估.md  16-Web前端实现方案.md  17-工作流与专家模式说明.md
examples/: env.deepseek.example  env.linkapi.example
scripts/: build_linux.sh  package_linux.sh  package_windows.bat  run-clang-tidy.ps1  setup_linux.sh  setup_sonarqube.sh  sonarqube-scan.ps1  static-analysis.ps1
src/: main.cpp
src/agent/: AgentLoop.cpp  AgentLoop.h
src/config/: AppConfig.cpp  AppConfig.h
src/core/: ContextManager.cpp  ContextManager.h  Message.cpp  Message.h  Session.cpp  Session.h
src/diagnostics/: Diagnostics.cpp  Diagnostics.h
src/llm/: LlmClient.cpp  LlmClient.h  LlmParsing.cpp  LlmParsing.h
src/mcp/: McpClient.cpp  McpClient.h  McpToolAdapter.cpp  McpToolAdapter.h
src/modes/: ModeCatalog.cpp  ModeCatalog.h
src/security/: PermissionManager.cpp  PermissionManager.h
src/skills/: SkillCatalog.cpp  SkillCatalog.h
src/storage/: HistoryReader.cpp  HistoryReader.h  JsonLogger.cpp  JsonLogger.h
src/tools/: FileTools.cpp  FileTools.h  ITool.cpp  ITool.h  PathUtils.cpp  PathUtils.h  ShellTool.cpp  ShellTool.h  ToolRegistry.cpp  ToolRegistry.h  WebSearchTool.cpp  WebSearchTool.h
src/ui/: Console.cpp  Console.h
src/utils/: Encoding.cpp  Encoding.h
src/web/: WebServer.cpp  WebServer.h
tests/: agent_loop_tests.cpp  config_tests.cpp  context_manager_tests.cpp  diagnostics_tests.cpp  history_tests.cpp  llm_parsing_tests.cpp  mcp_tests.cpp  mode_catalog_tests.cpp  security_tests.cpp  skill_catalog_tests.cpp  tools_tests.cpp
web/: app.js  index.html  style.css
第一周周报/: cpp-ai-agent-项目答辩.pptx  generate_defense_ppt.js  小组第一周项目总周报.md  康艺凡第一周个人项目周报.md  樊浩第一周个人项目周报.md  王博轩第一周个人项目周报.md  第一周项目阶段汇报.html  负责人-第一周个人项目周报.md  魏宇鑫第一周项目周报.md
第二周周报/: 樊浩第二周个人项目周报.md  王博轩第二周项目周报.md  魏宇鑫第二周项目周报.md
